RIP-v10.6- /mobile overflow fix in progress

--- a/css/newsfeed.css
+++ b/css/newsfeed.css
@@ -51,7 +51,7 @@
 .newsfeed-Zone{
   display       : flex;
   flex-direction: column;
-  height        : 100vh;
+  height        : 100%;
   width         : 100%;
   justify-content: space-between;
 }
